--- a/Index.html
+++ b/Index.html
@@ -138,7 +138,7 @@
     color: var(--dark-color);
   }
 
-  /* Comments & Reviews */
+  /* Comments */
   #comments {
     max-height: 250px;
     overflow-y: auto;
@@ -163,7 +163,6 @@
   }
 
   input[type="text"],
-  input[type="number"],
   textarea {
     padding: 14px;
     border: 2px solid #ccc;
@@ -174,7 +173,6 @@
   }
 
   input[type="text"]:focus,
-  input[type="number"]:focus,
   textarea:focus {
     border-color: var(--primary-color);
     outline: none;
@@ -249,7 +247,7 @@
     <nav>
       <a href="#" id="aboutBtn">About Us</a>
       <a href="#" id="blogBtn">Blog</a>
-      <!-- Removed Review link -->
+      <a href="#commentsSection" id="commentsBtn">Share Your Thoughts</a>
     </nav>
   </div>
 </header>
@@ -266,7 +264,6 @@
   <div class="buttons" style="text-align:center;">
     <a href="#" id="aboutBtn2" class="btn">Learn About Us</a>
     <a href="#commentsSection" class="btn">Share Your Thoughts</a>
-    <!-- Removed Review button -->
   </div>
 
   <!-- Services & Pricing -->
@@ -289,8 +286,6 @@
       <button type="submit">Post Comment</button>
     </form>
   </section>
-
-  <!-- Removed Reviews Section -->
 
 </div>
 
